@@ -1,89 +1,101 @@
 package clinica_backend.controllers;
 
-import java.nio.charset.StandardCharsets;
-import java.security.Key;
-import java.util.Collections;
-import java.util.Date;
-import java.util.HashMap;
 import java.util.Map;
-
-import javax.crypto.spec.SecretKeySpec;
+import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
+import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import clinica_backend.models.Medico;
+import clinica_backend.models.Paciente;
 import clinica_backend.repositories.MedicoRepository;
 import clinica_backend.repositories.PacienteRepository;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
+import jakarta.servlet.http.HttpSession;
 
-@RestController
-@RequestMapping("/login")
+/**
+ * Controlador encargado de gestionar el proceso de inicio de sesión de pacientes y médicos.
+ */
+@Controller
 public class LoginController {
-
-    @Autowired
-    private AuthenticationManager authenticationManager;
-
-    @Autowired
-    private MedicoRepository medicoRepository;
 
     @Autowired
     private PacienteRepository pacienteRepository;
 
-    @Value("${jwt.secret}")
-    private String secret;
+    @Autowired
+    private MedicoRepository medicoRepository;
 
-    @PostMapping
-    public ResponseEntity<Map<String, String>> iniciarSesion(@RequestParam String correo, @RequestParam String contraseña) {
+    // Credenciales predefinidas del administrador
+    private static final String ADMIN_CORREO = "administradorclinica@hotmail.com";
+    private static final String ADMIN_CONTRASEÑA = "Administrador123@";
+
+    @PostMapping("/login")
+    public String iniciarSesion(
+            @RequestParam String correo,
+            @RequestParam String contraseña,
+            HttpSession session,
+            RedirectAttributes redirectAttributes) {
+
+        System.out.println("Correo recibido: " + correo);
+        System.out.println("Contraseña recibida: " + contraseña);
+
+        // Validar inicio de sesión como Administrador
+        if (ADMIN_CORREO.equals(correo.trim()) && ADMIN_CONTRASEÑA.equals(contraseña.trim())) {
+            session.setAttribute("administrador", true);
+            session.setMaxInactiveInterval(30 * 60); // 30 minutos
+            System.out.println("Administrador autenticado");
+            return "redirect:/dashboardAdministrador.html";
+        }
+
+        // Autenticación del Paciente
+        Optional<Paciente> pacienteOpt = pacienteRepository
+                .findByCorreoAndContraseña(correo.trim(), contraseña.trim());
+
+        if (pacienteOpt.isPresent()) {
+            Paciente paciente = pacienteOpt.get();
+            session.setAttribute("paciente", paciente);
+            session.setAttribute("pacienteId", paciente.getId());
+            session.setMaxInactiveInterval(30 * 60); // 30 minutos
+
+            System.out.println("Paciente autenticado con ID: " + paciente.getId());
+            return "redirect:/paginaprincipalPaciente.html";
+        }
+
+        // Autenticación del Médico
+        Optional<Medico> medicoOpt = medicoRepository
+                .findByCorreoAndContraseña(correo.trim(), contraseña.trim());
+
+                if (medicoOpt.isPresent()) {
+                    Medico medico = medicoOpt.get();
+                    session.setAttribute("medico", medico); // Objeto completo
+                    session.setAttribute("medicoId", medico.getId()); // Solo ID
+                    session.setMaxInactiveInterval(30 * 60); // Sesión de 30 minutos
+                    return "redirect:/paginaprincipalMedico.html";
+                }
+                
+                
+
+        // Credenciales inválidas
+        System.out.println("Credenciales inválidas");
+        redirectAttributes.addFlashAttribute("error", "Credenciales inválidas");
+        return "redirect:/login.html?error=invalid";
+    }
+
+    @PostMapping("/api/sesion/cerrar")
+    public ResponseEntity<Map<String, Object>> cerrarSesion(HttpSession session) {
         try {
-            Authentication authentication = authenticationManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(correo, contraseña)
-            );
-
-            // Determinar el rol del usuario
-            String rol;
-            String redirectUrl;
-            
-            if (medicoRepository.findByCorreo(correo).isPresent()) {
-                rol = "MEDICO";
-                redirectUrl = "/paginaprincipalMedico.html";
-            } else if (pacienteRepository.findByCorreo(correo).isPresent()) {
-                rol = "PACIENTE";
-                redirectUrl = "/paginaprincipalPaciente.html";
-            } else {
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(Collections.singletonMap("error", "Usuario no encontrado"));
-            }
-
-            // Generar token JWT incluyendo el rol
-            Key key = new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), SignatureAlgorithm.HS256.getJcaName());
-            String jwt = Jwts.builder()
-                    .setSubject(correo)
-                    .claim("role", rol)
-                    .setIssuedAt(new Date())
-                    .setExpiration(new Date(System.currentTimeMillis() + 1000 * 60 * 60 * 10)) // 10 horas
-                    .signWith(key, SignatureAlgorithm.HS256)
-                    .compact();
-
-            // Crear respuesta con el token y la URL de redirección
-            Map<String, String> response = new HashMap<>();
-            response.put("token", jwt);
-            response.put("redirectUrl", redirectUrl);
-
-            return ResponseEntity.ok(response);
-        } catch (AuthenticationException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap("error", "Credenciales inválidas"));
+            // Invalida la sesión del usuario
+            session.invalidate();
+            return ResponseEntity.ok(Map.of("success", true, "message", "Sesión cerrada correctamente."));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("success", false, "message", "Error al cerrar sesión."));
         }
     }
+    
+
 }
